--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "url": "ssh://alan@alan.thefuture.place:/home/alan/dec20-git/kl10-schematics"
   },
   "author": "Alan Mimms <a.mimms@f5.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "asty": "^1.4.2",
+    "pegjs": "^0.9.0",
+    "pegjs-util": "^1.3.2"
+  }
 }
