--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "asty": "^1.4.2",
+    "lodash": "^4.11.1",
     "pegjs": "^0.9.0",
     "pegjs-util": "^1.3.2"
   }
