--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "author": "Alan Mimms <a.mimms@f5.com>",
   "license": "ISC",
   "dependencies": {
-    "asty": "^1.4.2",
     "lodash": "^4.11.1",
-    "pegjs": "^0.9.0",
-    "pegjs-util": "^1.3.2"
+    "pegjs": "^0.9.0"
   }
 }
