--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "version": "0.0.0",
   "homepage": "",
   "main": "src/",
-  "keywords": [
-  ],
+  "keywords": [],
   "license": "MIT",
   "repository": {},
   "author": {},
   "contributors": [],
   "bugs": {},
   "engines": {
-    "node": ">= 10.0.0"
+    "node": ">= 8.7.0"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "dependencies": {
+    "lodash": "^4.17.15",
+    "pegjs": "^0.10.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
