--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "command-line-args": "^5.1.1",
     "lodash": "^4.17.15",
     "pegjs": "^0.10.0"
   },
