--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "command-line-args": "^5.1.1",
+    "commander": "9.5.0",
     "lodash": "^4.17.15",
     "pegjs": "^0.10.0"
   },
