Add "clean" yarn run target

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "build": "./sim kl10pv.backplane",
+    "clean": "rm -f *.bp-pins *.wires bp.cram-defs bp.dump bp.nets bp.pins bp.verilog-names",
     "test": "jest"
   },
   "dependencies": {
