Add command to build CSV from cram-backplane.ods using libreoffice calc

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "./sim kl10pv.backplane",
     "clean": "rm -f *.bp-pins *.wires *.nets bp.cram-defs bp.dump bp.nets bp.pins bp.verilog-names *.slot *.before.evaluation *.after.evaluation",
+    "extract-cram-backplane-csv": "libreoffice --convert-to csv cram-backplane.ods",
     "test": "jest"
   },
   "dependencies": {
