--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -1,7 +1,15 @@
-EXE = Vmc10101
+MODULE = mc10101
+EXE = V$(MODULE)
+
+.PHONY:	all clean
 
 all:	$(EXE)
 
-Vmc10101:
-	verilator -Wall --trace --cc mc10101.sv --exe mc10101-tb.cc
+$(EXE):	obj_dir/$(EXE).mk
 	$(MAKE) -C obj_dir -f $@.mk
+
+obj_dir/$(EXE).mk:
+	verilator -Wall --trace --cc $(MODULE).sv --exe $(MODULE)-tb.cc
+
+clean:
+	@rm -fr obj_dir
