Add oscillator module. Fix broken const vs let. Allow clk signal to come from outside clk module (parameter to top).

--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -69,7 +69,7 @@ $(EXE):	$(SVFILES) $(CXXFILES) $(CFILES) $(HFILES) $(SVHFILES)
 $(DTEINTF): dte-interface.js
 	node dte-interface.js -- $(DTEINTF)
 
-$(MODS):	$(foreach M,$(MODS),$(VOBJDIR)/V$(M))
+$(MODS) oscillator:	$(foreach M,$(MODS),$(VOBJDIR)/V$(M))
 
 # Holy fucknoodles! These two steps were complicated to get "right".
 $(foreach M,$(MODS),$(VOBJDIR)/V$(M).mk): $(VOBJDIR)/V%.mk: $(LOGICDIR)/%.sv
