Build top level and hierarchy for entire project

--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -45,7 +45,7 @@ VFLAGS = \
 	--default-language 1800-2017 +1800-2017ext+sv \
 	-CFLAGS \
 	-MMD \
-	-I../grtl \
+	-I./gen \
 	$(KILLWARNINGS) \
 	--timescale 1ns/1ps --timescale-override 1ns/1ps \
 	--x-initial 0 \
@@ -53,7 +53,7 @@ VFLAGS = \
 
 .PHONY:	all logic-tb clean
 
-all:	$(EXE) $(LOGICEXEs)
+all:	$(EXE)
 
 logic-tb: $(MODS)
 
