Ignore fewer warnings

--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -41,10 +41,10 @@ VERILATOR ?= verilator
 
 KILLWARNINGS = \
 	-Wno-LITENDIAN \
-	-Wno-UNOPTFLAT \
-	-Wno-DECLFILENAME \
-	-Wno-CLKDATA \
-	-Wno-TIMESCALEMOD
+#	-Wno-UNOPTFLAT \
+#	-Wno-DECLFILENAME \
+#	-Wno-CLKDATA \
+#	-Wno-TIMESCALEMOD
 
 INCDIR = $(VERILATORROOT)/include
 CFLAGS += -I$(VOBJDIR) -I$(INCDIR) -I$(INCDIR)/vltstd -std=gnu++14 $(DEBUG)
