Start using our EBUSdrive signal on the way to an explicitly muxed EBUS.

--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -22,7 +22,7 @@ SLOTNAMES = \
 
 SVFILES = \
 	$(foreach M,$(MODS),$(LOGICDIR)/$(M).sv) \
-	$(foreach M,$(SLOTNAMES),$(M).sv) \
+	$(foreach M,$(SLOTNAMES),$(GENDIR)/$(M).sv) \
 
 SVHFILES = $(TOP).sv $(DTEINTF)
 CXXFILES = verilator-main.cc
