Time is now properly displayed in debug output. EBUS diagStrobe is now working and CLK module decodes set_reset and start properly. Modernized the verilator-main.cc style.

--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -66,7 +66,7 @@ VFLAGS = \
 	-I$(GENDIR) \
 	$(KILLWARNINGS) \
 	$(DEBUG_DIDNOTCONVERGE) \
-	--timescale 1ns/1ps --timescale-override 1ns/1ps \
+	--timescale 1ns --timescale-override 1ns \
 	--timing \
 	--x-initial 0 \
 	-cc --build --exe -j 9
