We use ascending bit numbers from left to right to match that stupid convention in PDP10 world. Ignore warnings about this wrongish behavior.

--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -46,6 +46,7 @@ KILLWARNINGS = \
 	-Wno-LITENDIAN \
 	-Wno-UNOPTFLAT \
 	-Wno-INITIALDLY \
+	-Wno-SELRANGE \
 #	-Wno-DECLFILENAME \
 #	-Wno-CLKDATA \
 #	-Wno-TIMESCALEMOD
