Add six-way fanout wire

--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -9,7 +9,7 @@ MODS = \
     mc10173 mc10174 mc10176 mc10179 mc10181 mc10210 \
     oscillator seq delay1 delay2 delay3 delayN delayNinverted \
     just_a_wire delay_line tapped_delay_20_2 tapped_delay_50_10 \
-    just_six_zero
+    just_six_zero wire6
 
 TOP = kl10pv
 
