--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -63,6 +63,7 @@ KILLWARNINGS = \
 	-Wno-UNOPTFLAT \
 	-Wno-INITIALDLY \
 	-Wno-SELRANGE \
+	-Wno-MULTIDRIVEN \
 #	-Wno-DECLFILENAME \
 #	-Wno-CLKDATA \
 #	-Wno-TIMESCALEMOD
