MYSTERIOUS and unreasolved. See STATUS.md for details. Both 10176 and 10141 implementations SOMETIMES appear to change output values while their clock stays low!

--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -63,7 +63,7 @@ KILLWARNINGS = \
 	-Wno-UNOPTFLAT \
 	-Wno-INITIALDLY \
 	-Wno-SELRANGE \
-	-Wno-MULTIDRIVEN \
+#	-Wno-MULTIDRIVEN \
 #	-Wno-DECLFILENAME \
 #	-Wno-CLKDATA \
 #	-Wno-TIMESCALEMOD
