No longer need as much debug

--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -69,13 +69,12 @@ KILLWARNINGS = \
 #	-Wno-CLKDATA \
 #	-Wno-TIMESCALEMOD
 
-DEBUG_DIDNOTCONVERGE = --prof-cfuncs -CFLAGS -DVL_DEBUG
-
 DEFINES = -D$(KLTYPE)
 INCDIR = $(VERILATORROOT)/include
 CFLAGS += -I$(VOBJDIR) -I$(INCDIR) -I$(INCDIR)/vltstd -std=gnu++14 $(DEBUG) $(OPTIMIZE) $(DEFINES)
 CXXFLAGS += -I$(VOBJDIR) -I$(INCDIR) -I$(INCDIR)/vltstd $(DEBUG) $(OPTIMIZE) $(DEFINES)
-CPPFLAGS += -DVL_DEBUG $(DEFINES)
+#CPPFLAGS += -DVL_DEBUG $(DEFINES)
+CPPFLAGS += $(DEFINES)
 
 VFLAGS = \
 	--stats \
